--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
             background-color: #0277bd;
             color: white;
             text-align: center;
-            padding: 0.5rem; /* Reduced padding for thinner height */
+            padding: 0.3rem; /* Reduced padding for thinner height */
             position: fixed;
             width: 100%;
             bottom: 0;
-            font-size: 0.8rem; /* Smaller font size for better scaling and thinner look */
+            font-size: 0.7rem; /* Smaller font size for better scaling and thinner look */
         }
         #surah-select {
             margin-bottom: 20px;
@@ -147,7 +147,7 @@
         }
         .verse-number {
             font-weight: bold;
-            color: #d32f2f;
+            color: #4fc3f7; /* Changed to light blue */
             margin-bottom: 5px;
         }
         .arabic {
@@ -281,6 +281,11 @@
                     option.textContent = `${chapter.id}. ${chapter.name_simple}`;
                     select.appendChild(option);
                 });
+            })
+            .catch(error => {
+                console.error('Error fetching Surah list:', error);
+                const select = document.getElementById('surah-select');
+                select.innerHTML = '<option value="">Error loading Surahs (check internet)</option>';
             });
 
         // Load Surah content when selected
@@ -291,22 +296,46 @@
             const contentDiv = document.getElementById('quran-content');
             contentDiv.innerHTML = '<p>Loading...</p>';
 
-            // Fetch Arabic text (Indo-Pak script) - exact same as Quran.com
+            // Fetch Arabic text (Indo-Pak script)
             fetch(`https://api.quran.com/api/v4/quran/verses/indopak?chapter_number=${surahId}`)
                 .then(response => response.json())
                 .then(arData => {
-                    contentDiv.innerHTML = '';
-                    arData.verses.forEach((verse) => {
-                        const verseNumber = verse.verse_key.split(':')[1]; // Extract verse number
-                        const arabicNumeral = toArabicIndic(verseNumber);
-                        const verseDiv = document.createElement('div');
-                        verseDiv.className = 'verse';
-                        verseDiv.innerHTML = `
-                            <div class="verse-number">Verse ${verseNumber}</div>
-                            <div class="arabic">${verse.text_indopak} (${arabicNumeral})</div>
-                        `;
-                        contentDiv.appendChild(verseDiv);
-                    });
+                    // Fetch English translation
+                    fetch(`https://api.quran.com/api/v4/quran/translations/20?chapter_number=${surahId}`) // 20 is Saheeh International
+                        .then(response => response.json())
+                        .then(enData => {
+                            // Fetch Urdu translation
+                            fetch(`https://api.quran.com/api/v4/quran/translations/158?chapter_number=${surahId}`) // 158 is Jalandhry Urdu
+                                .then(response => response.json())
+                                .then(urData => {
+                                    contentDiv.innerHTML = '';
+                                    arData.verses.forEach((verse, index) => {
+                                        const verseNumber = verse.verse_key.split(':')[1]; // Extract verse number
+                                        const arabicNumeral = toArabicIndic(verseNumber);
+                                        const verseDiv = document.createElement('div');
+                                        verseDiv.className = 'verse';
+                                        verseDiv.innerHTML = `
+                                            <div class="verse-number">Verse ${verseNumber}</div>
+                                            <div class="arabic">${verse.text_indopak} (${arabicNumeral})</div>
+                                            <div class="english">${enData.translations[index].text}</div>
+                                            <div class="urdu">${urData.translations[index].text}</div>
+                                        `;
+                                        contentDiv.appendChild(verseDiv);
+                                    });
+                                })
+                                .catch(error => {
+                                    console.error('Error fetching Urdu translation:', error);
+                                    contentDiv.innerHTML = '<p>Error loading Urdu translation.</p>';
+                                });
+                        })
+                        .catch(error => {
+                            console.error('Error fetching English translation:', error);
+                            contentDiv.innerHTML = '<p>Error loading English translation.</p>';
+                        });
+                })
+                .catch(error => {
+                    console.error('Error fetching Arabic text:', error);
+                    contentDiv.innerHTML = '<p>Error loading Arabic text.</p>';
                 });
         });
 
